[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/shape6.png" type="Texture" id=1]
[ext_resource path="res://Assets/shape5.png" type="Texture" id=2]
[ext_resource path="res://Assets/kenny_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/Top_ui.gd" type="Script" id=4]

[node name="Top_ui" type="Control"]
anchor_right = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score_label" type="Sprite" parent="MarginContainer"]
position = Vector2( 98.0921, 60.9718 )
scale = Vector2( 1.02648, 1 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="MarginContainer/score_label"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -87.6462
margin_top = -65.9977
margin_right = -97.6462
margin_bottom = -71.9977
rect_scale = Vector2( 0.915568, 0.9242 )
custom_fonts/font = ExtResource( 3 )
text = "0000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="move_count" type="Sprite" parent="MarginContainer"]
position = Vector2( 293.359, 80 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="MarginContainer/move_count"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -84.9765
margin_top = -88.0225
margin_right = -94.9765
margin_bottom = -94.0225
rect_scale = Vector2( 0.915568, 0.9242 )
custom_fonts/font = ExtResource( 3 )
text = "000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="game_timer" type="Sprite" parent="MarginContainer"]
position = Vector2( 483.745, 60 )
scale = Vector2( 0.940539, 1 )
texture = ExtResource( 1 )
offset = Vector2( 0, -1.52588e-05 )

[node name="Label" type="Label" parent="MarginContainer/game_timer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -84.9765
margin_top = -65.5479
margin_right = -94.9765
margin_bottom = -71.5479
rect_scale = Vector2( 0.915568, 0.9242 )
custom_fonts/font = ExtResource( 3 )
text = "000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}
